--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -37,6 +37,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      
+      - name: Check Azure CLI version
+        run: az --version
 
       - name: Download built artifact
         uses: actions/download-artifact@v3
